# Abu-Cowork

./: .gitignore  AX_TEST.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CLAUDE.md  DISCLAIMER.md  DISCLAIMER.zh-CN.md  LICENSE  README.md  README.zh-CN.md  README_EN.md  RELEASE-CHECKLIST.md  RELEASING.md  SECURITY.md  SECURITY.zh-CN.md  TESTING.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.quarantine.config.ts  wdio.conf.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy-website.yml  e2e.yml  release.yml  tauri-smoke.yml
abu-browser-bridge/: package-lock.json  package.json
abu-browser-bridge/src/: tools.ts
builtin-skills/docx/: SKILL.md
builtin-skills/html-widget/: SKILL.md
builtin-skills/infographic/: SKILL.md
builtin-skills/mermaid-diagram/: SKILL.md
builtin-skills/pdf/: SKILL.md
builtin-skills/pptx/: SKILL.md
builtin-skills/reflect/: SKILL.md
builtin-skills/skill-creator/: SKILL.md
builtin-skills/svg-diagram/: SKILL.md
builtin-skills/xlsx/: SKILL.md
docs/: ENTERPRISE-BUILD.md  Installation-Guide.md  Installation-Guide.zh-CN.md  Installation-Guide_EN.md  User-Guide.md  User-Guide.zh-CN.md  User-Guide_EN.md
e2e/: chat.spec.ts  conversation.spec.ts  helpers.ts  retry-indicator.spec.ts  settings.spec.ts  skill-upload.spec.ts  smoke.spec.ts  tabs.spec.ts
e2e/tauri-smoke/: app-launch.e2e.ts
public/: overlay.html  stop-button.html
scripts/: enterprise-leak-guard.sh  gen-model-data.test.ts  gen-model-data.ts  release-preflight.mjs  setup-node-runtime.sh  sync-models-dev.test.ts  sync-models-dev.ts
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/browser-extension/: background.js  background.js.map  content.js  content.js.map  manifest.json  offscreen.html  offscreen.js  offscreen.js.map  popup.html  popup.js  popup.js.map
src-tauri/capabilities/: default.json  windows-extras.json
src-tauri/inspect/: abu-preview-inspect.js
src-tauri/src/: accessibility.rs  append_file.rs  atomic_write.rs  browser.rs  catalog_db.rs  clipboard_files.rs  computer_use.rs  lib.rs  overlay.rs  preview_server.rs  pty.rs  sandbox.rs  sleep_prevention.rs  trash.rs
src/__tests__/: agentPipeline.integration.test.ts  quarantine-sla.test.ts  tauriCapabilities.test.ts
src/__tests__/contract/: tauri-commands.contract.test.ts
src/__tests__/quarantine/: skillManageTool-cold-import.test.ts  webTools-network-calls.test.ts
src/components/automation/: AutomationView.tsx
src/components/chat/: ActiveSkillsBar.tsx  AgentSelector.tsx  AgentStatusStrip.test.tsx  AgentStatusStrip.tsx  BatchProgress.tsx  ChatInput.referenceSerialize.test.ts  ChatInput.test.tsx  ChatInput.tsx  ChatView.tsx  CompactDivider.test.tsx  CompactDivider.tsx  ComputerUseStatusBar.tsx  ContextIndicator.test.tsx  ContextIndicator.tsx  ContextWarningBar.tsx  ConvIdBadge.tsx  DetailBlockView.tsx  FileAttachment.tsx  HtmlWidgetBlock.test.tsx  HtmlWidgetBlock.tsx  IMInfoBar.tsx  MarkdownRenderer.strikethrough.test.tsx  MarkdownRenderer.tsx  MermaidBlock.tsx  MessageBubble.tsx  MessageGroup.segments.test.ts  MessageGroup.tsx  ModelSelector.tsx  PermissionModeChip.test.tsx  PermissionModeChip.tsx  PlanStepsCard.test.tsx  PlanStepsCard.tsx  PromoteToProjectHint.tsx  QueuedMessagesStrip.test.tsx  QueuedMessagesStrip.tsx  RenderableCodeBlock.tsx  ScenarioGuide.tsx  ShareImportBanner.test.tsx  ShowWidgetCard.test.tsx  ShowWidgetCard.tsx  (+20 more)
src/components/common/: AnnouncementBanner.tsx  CloseDialog.tsx  CommandConfirmDialog.tsx  ConfirmDialog.tsx  CreateProjectDialog.tsx  DisclaimerBanner.tsx  ErrorBoundary.tsx  FolderSelector.tsx  GuideModal.tsx  StatusBar.tsx  (+8 more)
src/config/: featureGates.ts
src/core/: capabilities.ts
src/eval/: runOpenAI.ts  shimTauri.ts  toolSelectionRunner.ts
src/hooks/: useAutoScroll.ts  useFileDragDrop.ts  usePreviewFileWatch.test.ts  usePreviewFileWatch.ts  useWorkspaceTree.test.ts  useWorkspaceTree.ts
src/i18n/: types.ts
src/lib/: utils.test.ts  utils.ts
src/pet/: PetContextMenu.test.tsx  PetContextMenu.tsx  PetNotificationBubble.test.tsx  PetNotificationBubble.tsx  petStatusMeta.ts
src/stores/: batchProgressStore.test.ts  batchProgressStore.ts  chatStore.test.ts  chatStore.ts  diagnosticStore.ts  discoveredCapabilitiesStore.test.ts  discoveredCapabilitiesStore.ts  discoveryStore.ts  fileRefreshStore.ts  inboxStore.test.ts  inboxStore.ts  noticeMenubarStore.test.ts  noticeMenubarStore.ts  previewStore.test.ts  previewStore.ts  providerConfigsConsistency.test.ts  providerPlans.test.ts  scheduleStore.test.ts  scratchpadStore.test.ts  scratchpadStore.ts  settingsStore.test.ts  settingsStore.ts  storeVersions.test.ts  taskExecutionStore.test.ts  taskExecutionStore.ts  toastStore.ts  todoStore.test.ts  todoStore.ts  usageStatsStore.test.ts  usageStatsStore.ts
src/styles/: index.css
src/test/: setup.ts
src/types/: chatReference.test.ts  chatReference.ts  execution.ts  index.ts  marketplace.ts  provider.ts  todo.ts
src/utils/: aiEditSnapshots.test.ts  aiEditSnapshots.ts  atomicFs.test.ts  atomicFs.ts  browserUrl.test.ts  browserUrl.ts  canvasVersions.test.ts  canvasVersions.ts  consoleAnnouncement.ts  consoleDiagnostic.ts  consoleError.ts  consoleFeedback.ts  consolePing.ts  consoleTelemetryTarget.test.ts  consoleTelemetryTarget.ts  imageCompress.ts  inspectMessage.test.ts  inspectMessage.ts  nodeRuntime.test.ts  nodeRuntime.ts  openWithDefaultApp.test.ts  openWithDefaultApp.ts  previewUrl.ts  projectMigration.test.ts  projectMigration.ts  referenceSerializer.test.ts  referenceSerializer.ts  restoreFlow.ts  searchHighlight.test.ts  searchHighlight.tsx  secretStore.ts  tauriEnv.ts  toolLabels.ts  workflowExtractor.test.ts  workflowExtractor.ts  zoom.test.ts  zoom.ts
website/: docs.html  docs.zh-CN.html  index.html  index.zh-CN.html  style.css
website/docs/: Installation-Guide.md  User-Guide.md
(+425 files in other folders)
