[package]
name = "abu"
version = "0.9.7"
description = "ABU - AI Desktop Assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "abu_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "io-util", "rt", "sync", "macros", "time"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
xcap = "0.3"
enigo = { version = "0.3", features = ["serde"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
